# eth-json-rpc

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
data/: addresses.txt
include/: account.hpp  types.hpp  utils.hpp
src/: main.cpp  types.cpp  utils.cpp
